[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UserInterface/SubSettings/Control/ControlSetting.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_right = 128.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_right = 120.0
margin_bottom = 90.0
rect_min_size = Vector2( 240, 90 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxPosition" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 240.0
margin_bottom = 27.0
size_flags_vertical = 3

[node name="POS" type="Label" parent="Panel/VBoxContainer/HBoxPosition"]
margin_top = 6.0
margin_right = 77.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Position"

[node name="X" type="Label" parent="Panel/VBoxContainer/HBoxPosition"]
margin_left = 81.0
margin_top = 6.0
margin_right = 158.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="Y" type="Label" parent="Panel/VBoxContainer/HBoxPosition"]
margin_left = 162.0
margin_top = 6.0
margin_right = 240.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Y"

[node name="HboxTransparency" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 31.0
margin_right = 240.0
margin_bottom = 58.0
size_flags_vertical = 3

[node name="Transparency" type="Label" parent="Panel/VBoxContainer/HboxTransparency"]
margin_top = 6.0
margin_right = 118.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Transparency"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/HboxTransparency"]
margin_left = 122.0
margin_top = 5.0
margin_right = 240.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HboxScale" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 62.0
margin_right = 240.0
margin_bottom = 90.0
size_flags_vertical = 3

[node name="Scale" type="Label" parent="Panel/VBoxContainer/HboxScale"]
margin_top = 7.0
margin_right = 118.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Scale"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/HboxScale"]
margin_left = 122.0
margin_top = 6.0
margin_right = 240.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HboxButton" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -35.0454
margin_right = 120.0
margin_bottom = -5.04538
rect_min_size = Vector2( 240, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Panel/HboxButton"]
margin_right = 77.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Exit"

[node name="Reset" type="Button" parent="Panel/HboxButton"]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Reset"

[node name="Save" type="Button" parent="Panel/HboxButton"]
margin_left = 162.0
margin_right = 240.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Save"
[connection signal="pressed" from="Panel/HboxButton/Exit" to="." method="_on_Exit_pressed"]
